--- a/common/common.scss
+++ b/common/common.scss
@@ -1,12 +1,34 @@
+body,html{
+	height: auto!important;
+}
 .wrap{
-	padding-bottom: 40rpx;
+	padding-bottom: 30rpx;
 }
 .pic92{
 	width: 64rpx;
 }
+.uni-mask{
+	z-index: 99998!important;
+  }
+  uni-modal{
+	z-index: 99999!important;
+  }
+  .uni-modal{
+	z-index: 99999!important;
+  }
+.nodatadiv{
+	position: fixed;
+	width: 50%;
+	left: 25%;
+	top: 30%;
+}
+.nodatapic{
+	width: 100%;
+}
 .content{
 	position: relative;
 	z-index: 1;
+	padding-top: 30rpx;
 }
 .flexcenter{
 	display: flex;
